--- a/templates/css/homePageCSS.css
+++ b/templates/css/homePageCSS.css
@@ -88,6 +88,11 @@ ul li {
     color: black;
 }
 
+#logout {
+    text-decoration: none;
+    color: black;
+}
+
 .header-navbar-items-separate {
     display: block;
     width: 0.5px;
